--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
   color: #434455;
 }
 .header-address-menu-link:hover,
-.header-address-menu-link:hover {
+.header-address-menu-link:focus {
   color: #404bbf;
 }
 
